<resources>
    <string name="app_name">Parstagram</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="text_login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="image_for_the_post">image for the post</string>
    <string name="submit">submit</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">DvKhQ3MSIPtCEqgXpiycJlNvozV0RaoqaDUD0XhF</string>
    <string name="back4app_client_key">Dc508CXXRhJlptWZRLfr4XriKjQnzdDLcIilWGCm</string>
    <string name="feed">Feed</string>
</resources>