<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/description"
        android:autofillHints=""
        android:inputType="" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/etDescription"
        android:text="@string/take_picture"/>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_toEndOf="@id/btnCaptureImage"
        android:contentDescription="@string/image_for_the_post"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_toEndOf="@id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnSubmit"
        android:layout_alignParentEnd="true"
        android:text="@string/log_out"/>

    <Button
        android:id="@+id/btnMain2Feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnSubmit"
        android:layout_alignParentStart="true"
        android:text="@string/feed"/>

</RelativeLayout>





